add register and cancel

--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -1,7 +1,1 @@
-<!--Aqui vamos fazer a nossa estrutura html e ele vai receber os componentes.-->
-
-<!--passando o menu-->
-
-<app-menu></app-menu>
-
-<app-rodape></app-rodape>
+<app-cadastrar></app-cadastrar>
