--- a/frontEnd/src/app/cadastrar/cadastrar.component.html
+++ b/frontEnd/src/app/cadastrar/cadastrar.component.html
@@ -48,18 +48,16 @@
             </select>
           </div>
 
-          <div class="d-flex justify-content-center pt-3">
-            <button class="btn btn-danger temporizador m-lg-1" type="submit">
+          <div class="d-flex justify-content-center py-3">
+            <button class="btn btn-danger temporizador mx-lg-3" type="submit" routerLink="/entrar">
               Cancelar
             </button>
-            <button class="btn btn-success temporizador m-lg-1" type="submit">
+            <button class="btn btn-success temporizador mx-lg-3" type="submit">
               Cadastrar
             </button>
           </div>
 
           <hr class="mt-5 mb-5">
-
-          <p class="text-center"> Não tem uma conta? <a href=""> Cadastre-se </a></p>
 
         </div>
 
