--- a/frontEnd/src/app/cadastrar/cadastrar.component.html
+++ b/frontEnd/src/app/cadastrar/cadastrar.component.html
@@ -14,33 +14,45 @@
 
           <div class="form-group pt-3">
             <label class="pb-3" for="nome">Nome</label>
-            <input class="form-control" type="text" name="nome" id="nome" placeholder="digite o seu nome">
+
+            <!--[(ngModel)]='usuario.email' pega o dado digitado pelo usuário e manda para a class-->
+
+            <input [(ngModel)]='usuario.nome' class="form-control" type="text" name="nome" id="nome"
+              placeholder="digite o seu nome">
           </div>
 
           <div class="form-group pt-3">
-            <label class="pb-3" for="usuario">Usuario</label>
-            <input class="form-control" type="text" name="usuario" id="usuario" placeholder="digite o seu usuario">
+            <label class="pb-3" for="usuario">E-mail</label>
+            <input [(ngModel)]='usuario.email' class="form-control" type="text" name="E-mail" id="E-mail"
+              placeholder="digite o seu E-mail">
           </div>
 
           <div class="form-group pt-3">
             <label class="pb-3" for="foto">Link da foto</label>
-            <input class="form-control" type="text" name="foto" id="foto" placeholder="digite o link da sua foto">
+            <input [(ngModel)]='usuario.foto' class="form-control" type="text" name="foto" id="foto"
+              placeholder="digite o link da sua foto">
           </div>
 
           <div class="form-group pt-3">
             <label class="pb-3" for="senha">Senha</label>
-            <input class="form-control" type="password" name="senha" id="senha" placeholder="digite o sua senha">
+            <!--
+              Vamos passar um evento para a primeira senha, esse evendo vai confirmar se é igual ao so confimar senha no cadastrar.component.ts
+              Aqui no angular os eventos são feitos dentro de () e eles chamam os metodos.
+              O parametro recebido é um evento.
+            -->
+            <input (input)='confirmeSenha($event)' class="form-control" type="password" name="senha" id="senha"
+              placeholder="digite o sua senha">
           </div>
 
           <div class="form-group pt-3">
             <label class="pb-3" for="confirmarSenha">Confirmar senha</label>
-            <input class="form-control" type="password" name="confirmarSenha" id="confirmarSenha"
-              placeholder="confirme a sua senha">
+            <input [(ngModel)]='usuario.senha' class="form-control" type="password" name="confirmarSenha"
+              id="confirmarSenha" placeholder="confirme a sua senha">
           </div>
 
           <div class="form-group pt-3">
             <label class="pb-3" for="tipoUsuario">Tipo de usuário</label>
-            <select class="form-control" name="tipoUsuario" id="tipoUsuario">
+            <select class="form-control" name="tipoUsuario" id="tipoUsuario" (change)='tipoUsuario($event)'>
               <option>Selecione um tipo de usuário:</option>
               <option value="normal">Normal</option>
               <option value="adm"> Administrador </option>
@@ -52,7 +64,7 @@
             <button class="btn btn-danger temporizador mx-lg-3" type="submit" routerLink="/entrar">
               Cancelar
             </button>
-            <button class="btn btn-success temporizador mx-lg-3" type="submit">
+            <button class="btn btn-success temporizador mx-lg-3" type="submit" (click)='cadastrar()'>
               Cadastrar
             </button>
           </div>
