--- a/frontEnd/src/app/entrar/entrar.component.html
+++ b/frontEnd/src/app/entrar/entrar.component.html
@@ -10,16 +10,18 @@
 
           <div class="form-group">
             <label class="pb-3" for="usuario">Usuario</label>
-            <input class="form-control" type="text" name="usuario" id="usuario" placeholder="digite o seu usuário">
+            <input [(ngModel)]='userLogin.email' class="form-control" type="text" name="usuario" id="usuario"
+              placeholder="digite o seu email">
           </div>
 
           <div class="form-group pt-3">
             <label class="pb-3" for="senha">Senha</label>
-            <input class="form-control" type="password" name="senha" id="senha" placeholder="digite o sua senha">
+            <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="senha" id="senha"
+              placeholder="digite o sua senha">
           </div>
 
           <div class="d-flex justify-content-end pt-3">
-            <button class="btn btn-success temporizador" type="submit">
+            <button class="btn btn-success temporizador" type="submit" (click)='entrar()'>
               Entrar
             </button>
           </div>
