--- a/frontEnd/src/app/entrar/entrar.component.html
+++ b/frontEnd/src/app/entrar/entrar.component.html
@@ -20,7 +20,7 @@
               placeholder="digite o sua senha">
           </div>
 
-          <div class="d-flex justify-content-end pt-3">
+          <div class="d-flex justify-content-center pt-3">
             <button class="btn btn-success temporizador" type="submit" (click)='entrar()'>
               Entrar
             </button>
