--- a/frontEnd/src/styles.css
+++ b/frontEnd/src/styles.css
@@ -7,3 +7,17 @@
 html {
   scroll-behavior: smooth;
 }
+
+/* Como eu vou usar muitas vezes vou por elas como globais. */
+
+.fs-54 {
+  font-size: 54pt;
+}
+
+.fs-18 {
+  font-size: 18pt;
+}
+
+.fontText {
+  font-weight: bolder;
+}
