--- a/frontEnd/src/app/tema/tema.component.html
+++ b/frontEnd/src/app/tema/tema.component.html
@@ -19,10 +19,11 @@
             ajudar o bootstrap a encontrar ele de forma melhor
           -->
           <div class="form-group">
-            <input type="text" class="form-control mb-2" id="descricao" placeholder="Digite a descrição do tema">
+            <input [(ngModel)]="theme.descricao" type="text" class="form-control mb-2" id="descricao"
+              placeholder="Digite a descrição do tema">
 
             <div class="d-flex justify-content-lg-center ">
-              <button class="btn btn-light botaoCadastrar">Cadastrar</button>
+              <button class="btn btn-light botaoCadastrar" (click)='cadastrarTheme()'>Cadastrar</button>
             </div>
 
           </div>
@@ -49,32 +50,29 @@
     <div class="col-md-6">
 
       <!--Table-->
-      <table class="table table-striped table-hover">
+      <table class="table table-striped table-hover my-5">
         <thead>
+          <!--Se eu apago um th e tenho que apagar um td para manter a proporção-->
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col" class="text-lg-center">Nº</th>
+            <th scope="col" class="text-lg-center">Descrições</th>
+            <th scope="col" class="text-lg-center">Modificações</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
+        <tbody class="my-5">
+          <tr *ngFor="let theme of listaTheme">
+            <th scope="row" class="text-lg-center">{{theme.id}}</th>
+            <td class="text-lg-center">{{theme.descricao}}</td>
+            <td class="d-flex justify-content-center">
+              <!--
+                Passamos o [routerLink]="['/tema-edit', item.id]" para direcionar para
+                 a nossa rota e pegar o id no item que está nessa linha.
+              -->
+              <button class="btn btn-info mx-2" [routerLink]="['/tema-edit', theme.id]"
+                routerLinkActive="router-link-active"> Editar </button>
+              <button class="btn btn-danger mx-2" [routerLink]="['/tema-delete', theme.id]"
+                routerLinkActive="router-link-active"> Apagar </button>
+            </td>
           </tr>
         </tbody>
       </table>
@@ -85,3 +83,20 @@
   </div>
 
 </div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
