--- a/frontEnd/src/app/tema/tema.component.html
+++ b/frontEnd/src/app/tema/tema.component.html
@@ -65,7 +65,7 @@
             <td class="text-lg-center">{{theme.descricao}}</td>
             <td class="d-flex justify-content-center">
               <!--
-                Passamos o [routerLink]="['/tema-edit', item.id]" para direcionar para
+                Passamos o [routerLink]="['/tema-edit', theme.id]" para direcionar para
                  a nossa rota e pegar o id no item que está nessa linha.
               -->
               <button class="btn btn-info mx-2" [routerLink]="['/tema-edit', theme.id]"
