--- a/frontEnd/src/app/inicio/inicio.component.html
+++ b/frontEnd/src/app/inicio/inicio.component.html
@@ -62,9 +62,9 @@
         aria-selected="true">Todas as
         postagens</button>
 
-      <button class="nav-link text-secondary fontText" id="nav-minhasPostagens-tab" data-bs-toggle="tab"
-        data-bs-target="#nav-minhasPostagens" type="button" role="tab" aria-controls="nav-minhasPostagens"
-        aria-selected="false">Minhas
+      <button (click)='findByIdUser()' class="nav-link text-secondary fontText" id="nav-minhasPostagens-tab"
+        data-bs-toggle="tab" data-bs-target="#nav-minhasPostagens" type="button" role="tab"
+        aria-controls="nav-minhasPostagens" aria-selected="false">Minhas
         Postagem</button>
 
       <button class="nav-link text-secondary fontText" id="nav-postagemPorTema-tab" data-bs-toggle="tab"
@@ -75,14 +75,73 @@
   </nav>
   <div class="tab-content" id="nav-tabContent">
     <div class="tab-pane fade show active" id="nav-todasAsPostagens" role="tabpanel"
-      aria-labelledby="nav-todasAsPostagens-tab">Todas As Postagens</div>
+      aria-labelledby="nav-todasAsPostagens-tab">
 
-    <div class="tab-pane fade" id="nav-minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">Minhas
-      postagens.
+      <!--Card das postagens-->
+
+      <div class="card-columns py-2 d-flex">
+        <div class="card text-center" style="width: 18rem;" *ngFor='let item of listaPostagem'>
+          <div class="card-body px-2 ">
+            <h5 class="card-title">{{item.titulo}}</h5>
+            <small class="text-muted"> Tema: {{item.theme.descricao}}</small>
+            <p class="card-text">{{item.text}}</p>
+
+            <!-- Para formatar a data que vem do banco usamos a seguinte anotação. -->
+
+            <p class="card-text"><small class="text-muted">{{item.date | date: 'dd/MM/yyyy'}} às {{item.date | date:
+                'HH:mm'}}</small></p>
+            <p class="card-text"><small class="text-muted"> by: {{item.usuarioPostagem.nome}}</small></p>
+          </div>
+        </div>
+      </div>
+
+      <!--/Card das postagens-->
+
+    </div>
+
+    <div class="tab-pane fade" id="nav-minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
+
+      <!--Card das minhas postagens-->
+
+      <div class="card-columns py-2 d-flex">
+        <div class="card text-center" style="width: 18rem;" *ngFor='let item of user.postagem'>
+          <div class="card-body px-2 ">
+            <h5 class="card-title">{{item.titulo}}</h5>
+            <small class="text-muted"> Tema: {{item.theme.descricao}}</small>
+            <p class="card-text">{{item.text}}</p>
+
+            <!-- Para formatar a data que vem do banco usamos a seguinte anotação. -->
+
+            <p class="card-text"><small class="text-muted">{{item.date | date: 'dd/MM/yyyy'}} às {{item.date | date:
+                'HH:mm'}}</small></p>
+          </div>
+        </div>
+      </div>
+
+      <!--/Card das minhas postagens-->
     </div>
 
     <div class="tab-pane fade" id="nav-postagemPorTema" role="tabpanel" aria-labelledby="nav-postagemPorTema-tab">
-      Postagem por tema
+
+      <!--Card das postagens por tema-->
+
+      <div class="card-columns py-2 d-flex" *ngFor='let theme of listaTheme'>
+        <div class="card text-center" style="width: 18rem;" *ngFor='let item of theme.postagem'>
+          <div class="card-body px-2 ">
+            <h5 class="card-title">{{item.titulo}}</h5>
+            <p class="card-text">{{item.text}}</p>
+
+            <!-- Para formatar a data que vem do banco usamos a seguinte anotação. -->
+
+            <p class="card-text"><small class="text-muted">{{item.date | date: 'dd/MM/yyyy'}} às {{item.date | date:
+                'HH:mm'}}</small></p>
+            <p class="card-text"><small class="text-muted"> by: {{item.usuarioPostagem.nome}}</small></p>
+          </div>
+        </div>
+      </div>
+
+      <!--/Card das postagens por tema-->
+
     </div>
 
   </div>
