--- a/frontEnd/src/app/rodape/rodape.component.html
+++ b/frontEnd/src/app/rodape/rodape.component.html
@@ -1,4 +1,4 @@
-<footer class="text-center bg-secondary fixed-bottom pt-4">
+<footer class="text-center bg-secondary pt-4">
 
   <div class="container">
 
