--- a/frontEnd/src/app/inicio/inicio.component.html
+++ b/frontEnd/src/app/inicio/inicio.component.html
@@ -114,6 +114,9 @@
 
             <p class="card-text"><small class="text-muted">{{item.date | date: 'dd/MM/yyyy'}} às {{item.date | date:
                 'HH:mm'}}</small></p>
+
+            <button [routerLink]="['/postagem-edit', item.id]" class="btn text-info mx-2">Editar</button>
+            <button [routerLink]="['/postagem-delete', item.id]" class="btn text-danger mx-2">Apagar</button>
           </div>
         </div>
       </div>
