--- a/frontEnd/src/app/delete/postagem-delete/postagem-delete.component.html
+++ b/frontEnd/src/app/delete/postagem-delete/postagem-delete.component.html
@@ -1,1 +1,46 @@
-<p>postagem-delete works!</p>
+<div class="container mb-5 mt-5">
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="tetx-center text-secondary">Apagar postagem</h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <h4 class="text-center text-secondary">Você tem certeza que deseja apagar essa postagem?</h4>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <!--Card da postagem-->
+
+      <div class="card-columns py-2 d-flex">
+        <div class="card text-center" style="width: 18rem;">
+          <div class="card-body px-2 ">
+            <h5 class="card-title">{{postagem.titulo}}</h5>
+            <small class="text-muted"> Tema: {{postagem.theme.descricao}}</small>
+            <p class="card-text">{{postagem.text}}</p>
+
+            <!-- Para formatar a data que vem do banco usamos a seguinte anotação. -->
+
+            <p class="card-text"><small class="text-muted">{{postagem.date | date: 'dd/MM/yyyy'}} às {{postagem.date |
+                date:
+                'HH:mm'}}</small></p>
+          </div>
+        </div>
+      </div>
+
+      <!--/Card da postagem-->
+
+    </div>
+  </div>
+
+  <div class="row mt-5">
+    <div class="col-md-12 d-flex justify-content-center">
+      <button routerLink='/inicio' class="btn text-danger mx-2">não</button>
+      <button class="btn text-success mx-2" (click)='apagar()'>Sim</button>
+    </div>
+  </div>
+
+</div>
