--- a/frontEnd/src/app/menu/menu.component.html
+++ b/frontEnd/src/app/menu/menu.component.html
@@ -22,6 +22,7 @@
           <p class="m-0 fw-bold text-white fs-16"> Olá, {{nome}} </p>
         </li>
 
+        <!--*ngIf='authService.adm()' essa formula é usada para que somente o adm tenha acesso ao comando-->
         <li class="nav-item">
           <a [routerLink]="['/user-edit', id]">
             <P class="text-white fs-16 m-0"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i> </P>
